--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -107,32 +107,32 @@
             <h2>Ustawienia</h2>
 
             <h2>Priorytet</h2>
-            <table id="config_priority"></table>
-            <table id="add_config_priority">
-                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+            <table id="config_priority" class="list_50"></table>
+            <table id="add_config_priority" class="list_50">
+                <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_priority_input" class="full_cell" type="text" /></th>
-                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addPriority();' /></th>
+                    <th class='short_width bg_blue'><input class='imgbutton' type='image' src='add.png' onClick='addPriority();' /></th>
                 </tr>
             </table>
 
             <h2>Status</h2>
-            <table id="config_status"></table>
-            <table id="add_config_status">
-                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+            <table id="config_status" class="list_50"></table>
+            <table id="add_config_status" class="list_50">
+                <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_status_input" class="full_cell" type="text" /></th>
-                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addStatus();' /></th>
+                    <th class='short_width bg_blue'><input class='imgbutton' type='image' src='add.png' onClick='addStatus();' /></th>
                 </tr>
             </table>
 
             <h2>Dział</h2>
-            <table id="config_dept"></table>
-            <table id="add_config_dept">
-                <tr><th class="header" colspan="2">Dodaj Nową Wartość</th></tr>
+            <table id="config_dept" class="list_50"></table>
+            <table id="add_config_dept" class="list_50">
+                <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_dept_input" class="full_cell" type="text" /></th>
-                    <th class='short_width'><input class='imgbutton' type='image' src='add.png' onClick='addDept();' /></th>
+                    <th class='short_width bg_blue'><input class='imgbutton' type='image' src='add.png' onClick='addDept();' /></th>
                 </tr>
             </table>
         </div>
