css for add user

--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -145,28 +145,28 @@
                 <a href="#" onclick="tabs('settings4');">About</a>
             </div>
             <h2>Dodaj Użytkownika</h2>
-            <table>
+            <table class="list_50">
                 <tr>
-                    <td class="header" colspan="2">Dodaj Użytkownika</td>
+                    <td colspan="2">Dodaj Użytkownika</td>
                 </tr>
                 <tr>
-                    <th class="header">Imię i Nazwisko</th>
+                    <td>Imię i Nazwisko</td>
                     <th><input type="text" id="user_name" class="full_cell" /></th>
                 </tr>
                 <tr>
-                    <th class="header">E-mail</th>
+                    <td>E-mail</td>
                     <th><input type="text" id="user_email" class="full_cell" /></th>
                 </tr>
                 <tr>
-                    <th class="header">Hasło</th>
+                    <td>Hasło</td>
                     <th><input type="password" id="user_pass" class="full_cell" /></th>
                 </tr>
                 <tr>
-                    <th class="header">Dział</th>
+                    <td>Dział</td>
                     <th><select id="user_dept"></select></th>
                 </tr>
                 <tr>
-                    <th class="header">Uprawnienia</th>
+                    <td>Uprawnienia</td>
                     <th>
                         <select id="user_lvl">
                             <option value="1">Użytkownik</option>
@@ -175,7 +175,7 @@
                     </th>
                 </tr>
                 <tr>
-                    <th class="header" colspan="2"><button onClick="addUser();">Wyślij</button></th>
+                    <td colspan="2"><button onClick="addUser();">Wyślij</button></td>
                 </tr>
             </table>
         </div>
