--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -98,17 +98,15 @@
         </div>
 
         <div id="settings" class="tabcontent">
-            <div class="topnav">
+            <div class="topnav space_50">
                 <a href="#" onclick="tabs('settings');" class="active">Zmienne</a>
                 <a href="#" onclick="tabs('settings2');">Dodaj Użytkownika</a>
                 <a href="#" onclick="tabs('settings3');">Zarządzaj Użytkownikami</a>
                 <a href="#" onclick="tabs('settings4');">About</a>
             </div>
-            <h2>Ustawienia</h2>
 
-            <h2>Priorytet</h2>
             <table id="config_priority" class="list_50"></table>
-            <table id="add_config_priority" class="list_50">
+            <table id="add_config_priority" class="list_50 space_50">
                 <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_priority_input" class="full_cell" type="text" /></th>
@@ -116,9 +114,8 @@
                 </tr>
             </table>
 
-            <h2>Status</h2>
             <table id="config_status" class="list_50"></table>
-            <table id="add_config_status" class="list_50">
+            <table id="add_config_status" class="list_50 space_50">
                 <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_status_input" class="full_cell" type="text" /></th>
@@ -126,9 +123,8 @@
                 </tr>
             </table>
 
-            <h2>Dział</h2>
             <table id="config_dept" class="list_50"></table>
-            <table id="add_config_dept" class="list_50">
+            <table id="add_config_dept" class="list_50 space_50">
                 <tr><td colspan="2">Dodaj Nową Wartość</td></tr>
                 <tr>
                     <th class="full_width"><input id="add_dept_input" class="full_cell" type="text" /></th>
@@ -138,15 +134,15 @@
         </div>
 
         <div id="settings2" class="tabcontent">
-            <div class="topnav">
+            <div class="topnav  space_50">
                 <a href="#" onclick="tabs('settings');">Zmienne</a>
                 <a href="#" onclick="tabs('settings2');" class="active">Dodaj Użytkownika</a>
                 <a href="#" onclick="tabs('settings3');">Zarządzaj Użytkownikami</a>
                 <a href="#" onclick="tabs('settings4');">About</a>
             </div>
-            <h2>Dodaj Użytkownika</h2>
+
             <table class="list_50">
-                <tr>
+                <tr class="header">
                     <td colspan="2">Dodaj Użytkownika</td>
                 </tr>
                 <tr>
@@ -181,7 +177,7 @@
         </div>
 
         <div id="settings3" class="tabcontent">
-            <div class="topnav">
+            <div class="topnav  space_50">
                 <a href="#" onclick="tabs('settings');">Zmienne</a>
                 <a href="#" onclick="tabs('settings2');">Dodaj Użytkownika</a>
                 <a href="#" onclick="tabs('settings3');" class="active">Zarządzaj Użytkownikami</a>
@@ -192,7 +188,7 @@
         </div>
 
         <div id="edit_user_tab" class="tabcontent">
-            <div class="topnav">
+            <div class="topnav  space_50">
                 <a href="#" onclick="tabs('settings');">Zmienne</a>
                 <a href="#" onclick="tabs('settings2');">Dodaj Użytkownika</a>
                 <a href="#" onclick="tabs('settings3');" class="active">Zarządzaj Użytkownikami</a>
@@ -217,7 +213,7 @@
         </div>
 
         <div id="settings4" class="tabcontent">
-            <div class="topnav">
+            <div class="topnav  space_50">
                 <a href="#" onclick="tabs('settings');">Zmienne</a>
                 <a href="#" onclick="tabs('settings2');">Dodaj Użytkownika</a>
                 <a href="#" onclick="tabs('settings3');">Zarządzaj Użytkownikami</a>
