--- a/helpdesk/login.html
+++ b/helpdesk/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <title>login</title>
+    <title>Help Desk</title>
 </head>
 <body>
     <div class="banner center" style="top:10%;"><h1>Witaj na stronie Helpdesku</h1></div>
