--- a/helpdesk/login.html
+++ b/helpdesk/login.html
@@ -16,7 +16,7 @@
                 <input type="image" src="email.png" tabindex="-1" style="height: 20px; width: 20px;"/>
                 <input type="text" name="email" placeholder="" id="email" required/><br>
             </div>
-            <label for="password">Password:</label><br>
+            <label for="password">Hasło:</label><br>
             <div>
                 <input type="image" src="padlock.png" tabindex="-1" style="height: 20px;width: 20px;"/>
                 <input type="password" name="password" placeholder="" id="password" required><br>
