--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -17,27 +17,26 @@
 
     <div id="popup"><label id="popup_text"></label></div>
 
-    <div class="main" id="test1">
+    <div class="main">
         <div id="add_ticket" class="tabcontent">
-            <h2>Nowe Zgłoszenie</h2>
-            <table>
-                <tr>
-                    <td class="header" colspan="2">Wypełnij formularz</td>
+            <table class="list_50 space_top_50">
+                <tr class="header">
+                    <td colspan="2">Nowe Zgłoszenie</td>
                 </tr>
                 <tr>
-                    <th class="header">Temat</th>
+                    <td>Temat</td>
                     <th><input type="text" id="topic" /></th>
                 </tr>
                 <tr>
-                    <th class="header">Priorytet</th>
+                    <td>Priorytet</td>
                     <th><select id="priority"></select></th>
                 </tr>
                 <tr>
-                    <th class="header">Opis</th>
+                    <td>Opis</td>
                     <th><textarea type="text" id="desc" wrap="hard"></textarea></th>
                 </tr>
                 <tr>
-                    <th class="header" colspan="2"><button onClick="send();">Wyślij</button></th>
+                    <td colspan="2"><button onClick="send();">Wyślij</button></td>
                 </tr>
             </table>
         </div>
@@ -67,12 +66,10 @@
         </div>
 
         <div id="view_ticket" class="tabcontent">
-            <h2>Zgłoszenie</h2>
-            <table id="view_ticket_table"></table>
+            <table id="view_ticket_table" class="list_50 space_50 space_top_50"></table>
 
-            <h2>Edytuj</h2>
-            <table>
-                <tr><th class="header" colspan="2">Wprowadź Zmiany</th></tr>
+            <table class="list_50">
+                <tr class="header"><td colspan="2">Wprowadź Zmiany</td></tr>
                 <tr>
                     <th class="header">Priorytet</th>
                     <th><select id="edit_priority"></select></th>
@@ -84,16 +81,14 @@
                 <tr><th class="header" colspan="2"><button onClick="sendEdit();">Wyślij</button></th></tr>
             </table>
 
-            <h2>Komentarze</h2>
-            <table id="view_ticket_com">
+            <table id="view_ticket_com" class="list_50">
                 <tr><td class="header">Data dodania</td><td class="header">Użytkownik</td><td class="header">Komentarz</td></tr>
             </table>
 
-            <h2>Dodaj Komentarz</h2>
-            <table id="add_com">
-                <tr><th class="header" colspan="2">Dodaj Komentarz</th></tr>
-                <tr><th class="header">Treść</th><th><input type="text" id="com" /></th></tr>
-                <tr><th class="header" colspan="2"><button onClick="sendCom();">Wyślij</button></th></tr>
+            <table id="add_com" class="list_50 space_50">
+                <tr class="header"><td colspan="2">Dodaj Komentarz</td></tr>
+                <tr><td>Treść</td><th><input type="text" id="com"/></th></tr>
+                <tr><td colspan="2"><button onClick="sendCom();">Wyślij</button></td></tr>
             </table>
         </div>
 
