--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -218,7 +218,7 @@
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="jquery-3.6.3.min.js"></script>
     <script src="/admin.js"></script>
 </body>
 </html>
