--- a/helpdesk/admin.html
+++ b/helpdesk/admin.html
@@ -165,7 +165,7 @@
                         </select>
                     </th>
                 </tr>
-                <tr>
+                <tr class="header">
                     <td colspan="2"><button onClick="addUser();">Wyślij</button></td>
                 </tr>
             </table>
@@ -178,7 +178,6 @@
                 <a href="#" onclick="tabs('settings3');" class="active">Zarządzaj Użytkownikami</a>
                 <a href="#" onclick="tabs('settings4');">About</a>
             </div>
-            <h2>Lista Użytkowników</h2>
             <table id="user_list" class="list"></table>
         </div>
 
@@ -189,7 +188,7 @@
                 <a href="#" onclick="tabs('settings3');" class="active">Zarządzaj Użytkownikami</a>
                 <a href="#" onclick="tabs('settings4');">About</a>
             </div>
-            <h2>Edytuj dane Użytkownika</h2>
+            
             <table id="edit_user" class="list_50"></table>
             <table id="edit_user_controls" class="list_50 space_50"></table>
             
